--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
-  <h1 class="page-header">Welcome Aboard!</h1>
-  <p class="lead">Build it!</p>
+<h1 class="page-header">Welcome Aboard!</h1>
+<p class="lead">Replicate what we built in class:</p>
+<ol>
+  <li>The url <a href="http://localhost:3000/weather/search">http://localhost:3000/weather/search</a> should display a form I can use to enter a city name</li>
+  <li>The url <a href="http://localhost:3000/weather/conditions">http://localhost:3000/weather/conditions</a> should display the city name and at least one weather condition (temperature, wind speed, humidity, etc.)</li>
+  <li>Remember, you can use a web service like <a href="http://www.openweathermap.org">http://www.openweathermap.org</a> or <a href="http://forecast.io">http://forecast.io</a> or you can use Ruby to generate a random number between 0 and 100.</li>
+</ol>
+
+<p class="lead">Then create two more web pages:</p>
+  <li>Identify a resource type in your app (products, rides, photos, etc.)</li>
+  <li>The url <a href="http://localhost:3000/index">http://localhost:3000/index</a> should display a list of your items</li>
+  <li>The url <a href="http://localhost:3000/show">http://localhost:3000/show</a> should display just one item from the list</li>
+  <li>There should be links that take me from one back to the other and back again.</li>
+</ol>
+
+<h3>Good Luck!</h3>
